--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Put It Digital",
+  "author": "",
   "license": "MIT",
   "description": "",
   "dependencies": {
